# jvm-heap-analyzer-mcp

./: .gitignore  README.md  mcp.json  pyproject.toml
src/heap_analyzer_mcp/: __main__.py  parser.py  tools_adapter.py
src/heap_analyzer_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: sample_thread_dump.txt  sample_thread_dump_2.txt  test_mcp_tools_adapter.py  test_tools.py
